fixed off center icons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,14 +23,11 @@ color: white;
 }
 
 #fa-center.fa{
-  padding: 20px;
   font-size: 40px;
   width: 50px;
-  text-align: center;
   text-decoration: none;
   margin: 5px 2px;
   color: white;
-  
 }
 
 /*
